--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "npm run build && git diff --quiet dist || (git add dist && git commit -m 'update production version') && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
